// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceLinksDropdown should match snapshot with button links 1`] = `
<div>
  <div
    aria-controls="radix-:rd:"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    <div
      class="skeleton skeleton--loaded rounded"
      data-testid="skeleton"
    >
      <button
        class="btn btn--large btn--stroked "
        type="button"
      >
        <span
          class="icon-solid-angle-down shrink-0 "
          role="img"
        />
        <span>
          Links
        </span>
        <span
          class="icon-solid-link shrink-0 "
          role="img"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ServiceLinksDropdown should match snapshot with links popover 1`] = `
<div>
  <div
    aria-controls="radix-:r6:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    <div
      class="skeleton skeleton--loaded rounded"
      data-testid="skeleton"
    >
      <button
        class="btn btn--large btn--stroked "
        type="button"
      >
        <span
          class="icon-solid-angle-down shrink-0 "
          role="img"
        />
        <span>
          Links
        </span>
        <span
          class="icon-solid-link shrink-0 "
          role="img"
        />
      </button>
    </div>
  </div>
</div>
`;
